--- a/src/pages/Article/Detail/Detail.scss
+++ b/src/pages/Article/Detail/Detail.scss
@@ -12,6 +12,9 @@
   border-radius: 3px;
   box-shadow: 0 0 2px 0 rgba(136, 136, 136, 0.2);
 }
+.w-main-present {
+  margin: 72px 0 0;
+}
 
 [v-cloak] {
   display: none;
@@ -52,6 +55,10 @@
   .favorite {
     i {
       color: #ffabce;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
   .dislike {
@@ -148,8 +155,59 @@
     }
   }
 }
+/*
+|-------------------------------------
+|
+|------------------------------------
+*/
+.w-subject {
+  font-size: 18px;
+  color: #555;
+  padding: 8px 16px;
+  background: #fff;
+  box-shadow: 0 0 8px rgba(185, 185, 185, 0.8);
+}
+.w-presents {
+  /deep/ .el-carousel__container {
+    height: 320px;
+  }
+  img {
+    margin: 4px 0;
+    width: 100%;
+    height: 194px;
+  }
+  .w-label {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #ffbf7f;
 
+    span {
+      display: inline-block;
+      padding: 2px 0;
+    }
+  }
+  .w-target {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #ddd;
+    background: #f0f0f0;
 
+    span {
+      color: #333;
+      padding: 2px 0;
+    }
+  }
+
+  .w-card {
+    padding: 6px 8px;
+    border: 1px solid #f0f0f0;
+    border-radius: 7px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(185, 185, 185, 0.8);
+  }
+  .w-card-title {
+  }
+}
 /*
 |-----------------------------------
 | util
